Default theme is now dark. Added transitioning effects to favorite list.

--- a/src/pages/Game/Game.css
+++ b/src/pages/Game/Game.css
@@ -1,9 +1,10 @@
 .game-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.game-list-wrapper {
+/* .game-list-wrapper {
     position: relative;
 }
 
@@ -22,8 +23,6 @@
 }
 
 .game-list-nav-wrapper *:hover {
-    /* background-color: black; */
     opacity: 1;
-
-}
+} */
 
