--- a/src/pages/Game/FavoriteList.css
+++ b/src/pages/Game/FavoriteList.css
@@ -1,5 +1,7 @@
 .favorite-container {
-
+   box-shadow: 0px 0px 21px 4px #000000;
+   background-color: rgba(31, 31, 31, 0.37);
+   /* background-color: rgb(31, 31, 31); */
 }
 
 .fadeOut {
