--- a/src/pages/components/Nav/Nav.css
+++ b/src/pages/components/Nav/Nav.css
@@ -5,11 +5,22 @@
     cursor: default;
 }
 
+.nav-icon {
+    /* display: flex; */
+    /* align-self: flex-start; */
+}
+
+.home-tab {
+    /* display: flex; */
+    /* align-items: flex-start; */
+}
+
 .nav-tab {
     padding: 4px 8px;
     cursor: default;
     text-decoration: none;
     color: inherit;
+    display: flex;
 }
 
 .light {
@@ -22,6 +33,7 @@
     background-color: rgb(75, 75, 75);
     color: rgba(255, 255, 255, 0.712);
     transition: all 0.25s linear;
+    /* position: relative; */
 }
 
 /* .dark nav-active {
@@ -37,4 +49,26 @@
 .dark .nav-tab:hover {
     /* box-shadow: inset 0 0 10px white; */
     background-color: rgba(175, 175, 175, 0.445);
+}
+
+.theme-toggle-label-dark {
+    position: absolute;
+    top: 15px;
+    opacity: .8;
+    background-color: rgb(75, 75, 75);
+    border: white 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    /* transition: all .1s; */
+}
+
+.theme-toggle-label-light {
+    position: absolute;
+    top: 15px;
+    opacity: .8;
+    background-color: darkgrey;
+    border: black 1px solid;
+    border-radius: 5px;
+    padding: 10px;
+    /* transition: all .1s; */
 }
