--- a/src/pages/Game/GamePanel.css
+++ b/src/pages/Game/GamePanel.css
@@ -1,33 +1,43 @@
 .game-panel-container {
     width: 915.5916px;
-    /* height: 343.839px; */
+    height: 412.467px;
+    /* max-width: 915.5916px;
+    min-width: 600px;
+    max-height: 412.467px;
+    min-height: 270.2954px;
+    height: 343.839px; */
     /* width: 100%; */
     display: flex;
     flex-direction: column;
-    /* height: 90vh; */
 }
 
 .game-panel-top-wrapper {
     width: 100%;
-    height: 343.839px;
+    /* height: 343.839px; */
+    height: 83.3615%;
+    /* height: 83.36157%; */
     display: inline-flex;
     flex-direction: row;
 }
 
 .game-panel-img {
-    width: 100%;
+    width: 65.5314%;
+
+    /* width: 100%; */
     object-fit: fill;
-    width: 600px;
+    /* object-fit:contain; */
+    /* width: 600px; */
     /* transition: opacity 10s;
     opacity: 1; */
+    /* background-color: white; */
 }
 
 .game-panel-info {
-    min-width: 315.5916px;
-    width: 315.5916px;
+    /* min-width: 315.5916px; */
+    width: 34.46859%;
+    /* width: 315.5916px; */
     /* width: 100%; */
     
-    /* overflow: hidden; */
 }
 
 .game-panel-title {
@@ -40,4 +50,7 @@
 
 .game-panel-msg {
     width: 100%;
+    /* height: 16.6384%; */
+    /* margin: 0; */
+    /* padding: 0; */
 }
