--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -1,16 +1,26 @@
 .portfolio-panel-container {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
-    width: 915.5916px;
-    height: 343.839px;
+    justify-content: space-between;
+    /* width: 100%; */
+    min-width: 500px;
+    /* min-width: 700px; */
+    max-width: 915.5916px;
+    /* width: 915.5916px; */
+    height: 300px;
 }
 
 .portfolio-panel-img {
-    width: 100%;
+    /* width: 100%; */
+    /* flex: 1 1; */
+    /* min-width: 40%; */
+    width: 45%;
     object-fit: contain;
-    width: 600px;
 }
 
 .portfolio-info-container {
-    flex: 1;
+    /* min-width: 30%; */
+    /* max-width: 45%; */
+    width: 45%;
+    border: 1px solid red;
 }
