--- a/src/pages/Game/GamePanel.css
+++ b/src/pages/Game/GamePanel.css
@@ -1,6 +1,16 @@
 .game-panel-container {
-    width: 915.5916px;
-    height: 412.467px;
+    /* width: 915.5916px; */
+    /* height: 412.467px; */
+    min-width: 602.86px;
+    min-height: 271.58px;
+    max-width: 915.5916px;
+    max-height: 412.467px;
+    width: 90.38416vw;
+    height: 40.71737vw;
+    /* max-height: 515.0202px;
+    width: 90vw;
+    height: 50.625vw; */
+
     /* max-width: 915.5916px;
     min-width: 600px;
     max-height: 412.467px;
@@ -15,6 +25,8 @@
     width: 100%;
     /* height: 343.839px; */
     height: 83.3615%;
+    /* height: 56.25%; */
+
     /* height: 83.36157%; */
     display: inline-flex;
     flex-direction: row;
@@ -22,10 +34,11 @@
 
 .game-panel-img {
     width: 65.5314%;
+    /* height: 78.6111%; */
 
     /* width: 100%; */
     object-fit: fill;
-    /* object-fit:contain; */
+    /* object-fit: contain; */
     /* width: 600px; */
     /* transition: opacity 10s;
     opacity: 1; */
@@ -51,6 +64,7 @@
 .game-panel-msg {
     width: 100%;
     /* height: 16.6384%; */
-    /* margin: 0; */
+    margin: 0;
     /* padding: 0; */
+    overflow: hidden;
 }
