--- a/src/pages/components/Nav/Nav.css
+++ b/src/pages/components/Nav/Nav.css
@@ -3,16 +3,27 @@
     width: 100%;
     justify-content: flex-end;
     cursor: default;
+    align-items: center;
 }
 
 .nav-icon {
-    /* display: flex; */
-    /* align-self: flex-start; */
+    /* display: flex;
+    align-self: flex-end; */
 }
 
 .home-tab {
+    /* display: flex;
+    align-items: flex-end;
+    align-content: flex-end;
+    align-self: flex-end;
+    justify-self: flex-end;
+    justify-items: flex-end;
+    justify-content: flex-end; */
+}
+
+.theme-icon {
     /* display: flex; */
-    /* align-items: flex-start; */
+    /* align-items: center; */
 }
 
 .nav-tab {
@@ -21,6 +32,7 @@
     text-decoration: none;
     color: inherit;
     display: flex;
+    align-items: center;
 }
 
 .light {
