--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@ body {
   box-sizing: border-box;
   /* background-color: red; */
   transition: background-color .25s linear;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: Noto Sans,Trebuchet MS,Helvetica Neue,Arial,sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
