--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
 .App {
+  width: 100%;
+  height: 100%;
   text-align: center;
+  /* position: relative; */
+}
+
+.test-nav {
+  /* overflow: hidden; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* height: 10%; */
+}
+
+.app-content {
+  position: fixed;
+  overflow-y: auto;
+  height: calc(100% - 53px); /* navbar height */
+  /* height: calc(100% - 45px); */
+  width: 100%;
+  /* overflow: hidden; */
+  /* position: fixed; */
 }
