--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -1,5 +1,7 @@
 .portfolio-panel-container {
-    display: inline-flex;
+    /* display: inline-flex; */
+    /* vertical-align: top; */
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     /* width: 100%; */
@@ -10,17 +12,48 @@
     height: 300px;
 }
 
+.portfolio-panel-img-container {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    /* height: 100%; */
+    /* background-color: blue; */
+}
+
+.portfolio-panel-img-bot-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: center; */
+    justify-content: space-between;
+}
+
 .portfolio-panel-img {
     /* width: 100%; */
     /* flex: 1 1; */
     /* min-width: 40%; */
-    width: 45%;
+    /* width: 45%; */
+    width: 100%;
     object-fit: contain;
 }
 
+.portfolio-nav-arrow {
+    opacity: .3;
+    background-color: grey;
+}
+
+.portfolio-nav-arrow:hover {
+    opacity: .8;
+}
+
 .portfolio-info-container {
+    /* height: 100%; */
     /* min-width: 30%; */
     /* max-width: 45%; */
     width: 45%;
     border: 1px solid red;
+}
+
+.portfolio-panel-img-title {
+
 }
