--- a/src/pages/components/Nav/Nav.css
+++ b/src/pages/components/Nav/Nav.css
@@ -16,6 +16,7 @@
 } */
 
 .nav-icon {
+    margin-right: 5px;
     /* display: flex;
     align-self: flex-end; */
 }
@@ -31,6 +32,7 @@
 }
 
 .theme-icon {
+    margin: 0px 15px 0px 5px;
     /* display: flex; */
     /* align-items: center; */
 }
