--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -2,4 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* overflow: hidden; */
 }
+
+
+
+/* .portfolio-container-fs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: white;
+    z-index: 101;
+} */
