--- a/src/pages/components/Nav/Nav.css
+++ b/src/pages/components/Nav/Nav.css
@@ -89,6 +89,7 @@
     border-radius: 5px;
     padding: 10px;
     /* transition: all .1s; */
+    z-index: 200;
 }
 
 .theme-toggle-label-light {
@@ -102,4 +103,5 @@
     border-radius: 5px;
     padding: 10px;
     /* transition: all .1s; */
+    z-index: 200;
 }
