--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -7,14 +7,19 @@
     /* width: 100%; */
     /* min-width: 500px; */
     /* min-width: 915.583px; */
+    
     min-width: 915.5916px;
-    /* min-width: 700px; */
+
     max-width: 915.5916px;
     /* width: 915.5916px; */
     height: 300px;
 
-    margin: 20px 0 20px 0;
+    margin: 20px 0 50px 0;
 }
+
+
+
+
 
 .portfolio-panel-img-container {
     height: 100%;
@@ -25,7 +30,10 @@
     width: 45%;
     /* height: 100%; */
     /* background-color: blue; */
+    box-shadow: 0px 0px 21px 4px #000000;
 }
+
+
 
 .portfolio-panel-img-bot-wrapper {
     /* height: 12%; */
@@ -36,9 +44,11 @@
 
     justify-content: space-between;
 
-    margin-top: auto;
+    /* margin-top: auto; */
     background-color: rgba(31, 31, 31, 0.37)
 }
+
+
 
 .portfolio-panel-img {
     /* width: 100%; */
@@ -48,6 +58,10 @@
     width: 100%;
     object-fit: contain;
     max-height: 88%;
+    flex-grow: 1;
+    box-sizing: border-box;
+    border: 5px solid white;
+    background-color: black;
 }
 
 .portfolio-nav-arrow {
@@ -67,6 +81,7 @@
     /* min-width: 45%; */
     width: 45%;
     border: 1px solid red;
+    box-shadow: 0px 0px 21px 4px #000000;
 }
 
 .portfolio-panel-img-title {
@@ -128,4 +143,30 @@
 
 .portfolio-panel-img-fs-btn-close:hover {
     opacity: .9;
+}
+
+
+@media only screen and (max-width: 900px){
+    .portfolio-panel-container {
+        display: flex;
+        flex-direction: column;
+        min-width: auto;
+        max-width: 414px;
+        height: 600px;
+        width: 414px;
+    }
+
+    .portfolio-panel-img-container {
+        height: 300px;
+        width: 414px;
+        /* align-self: center; */
+        align-content: center;
+        
+    }
+
+    .portfolio-info-container {
+        width: 414px;
+        height: 300px;
+        /* align-self: center; */
+    }
 }
