Portfolio: Changed links to an array of nested objects, added notes to links, and some minor chnages to the css of portfolio panel. Home: Updated header. Nav: Removed blog tab.

--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -5,7 +5,15 @@
     /* overflow: hidden; */
 }
 
+/* .portfolio-header {
+    font-size: 30px;
+} */
 
+/* .portfolio-github {
+    text-decoration: none;
+    color: rgb(62, 166, 255);
+    font-weight: 400;
+} */
 
 /* .portfolio-container-fs {
     display: flex;
