--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -4,33 +4,28 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* width: 100%; */
-    /* min-width: 500px; */
-    /* min-width: 915.583px; */
     
-    min-width: 915.5916px;
+    /* min-width: 915.5916px; */
+    /* max-width: 915.5916px; */
 
-    max-width: 915.5916px;
+    width: 858.33px;
+    /* max-width: 800px; */
     /* width: 915.5916px; */
     height: 300px;
 
     margin: 20px 0 50px 0;
 }
 
-
-
-
-
 .portfolio-panel-img-container {
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* max-width: 50%; */
-    /* min-width: 45%; */
-    width: 45%;
-    /* height: 100%; */
+
+    /* width: 45%; */
+    width: 48%;
+
     /* background-color: blue; */
-    box-shadow: 0px 0px 21px 4px #000000;
+    box-shadow: 0px 0px 21px 2px #000000;
 }
 
 
@@ -61,7 +56,9 @@
     flex-grow: 1;
     box-sizing: border-box;
     /* border: 5px solid white; */
-    border: 10px ridge #1C6EA4;
+    /* border: 10px ridge #1C6EA4; */
+    /* border: 10px ridge rgb(6, 73, 117); */
+    /* border: 10px ridge rgb(129, 4, 4); */
     background-color: black;
 }
 
@@ -75,14 +72,30 @@
 }
 
 .portfolio-info-container {
-    /* height: 100%; */
-    /* min-width: 30%; */
-    /* max-width: 45%; */
-    /* max-width: 49%; */
-    /* min-width: 45%; */
-    width: 45%;
-    border: 1px solid red;
-    box-shadow: 0px 0px 21px 4px #000000;
+    /* width: 45%; */
+    width: 48%;
+    /* border: 1px solid red; */
+    /* box-shadow: 0px 0px 21px 2px #000000; */
+    box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.83);
+    
+    box-sizing: border-box;
+    /* border: 10px ridge #1C6EA4; */
+    /* border: 10px ridge rgb(6, 73, 117); */
+}
+
+.portfolio-info-link {
+    text-decoration: none;
+    color: rgb(62, 166, 255);
+    font-weight: 400;
+}
+
+.portfolio-info-link-note {
+    font-weight: 400;
+    font-style: italic;
+}
+
+.portfolio-info-tech {
+    font-weight: 400;
 }
 
 .portfolio-panel-img-title {
@@ -153,6 +166,7 @@
         flex-direction: column;
         min-width: auto;
         max-width: 414px;
+        /* height: 600px; */
         height: 600px;
         width: 414px;
     }
@@ -169,5 +183,15 @@
         width: 414px;
         height: 300px;
         /* align-self: center; */
+        /* box-shadow: 0px 7px 21px 2px rgba(0,0,0,0.53); */
     }
+
+    .p-shadow-top {
+        box-shadow: 0px -3px 21px 2px rgba(0,0,0,0.53);
+    }
+
+    .p-shadow-bot {
+        box-shadow: 0px 3px 21px 2px rgba(0,0,0,0.53);
+    }
+
 }
