--- a/src/pages/Game/GamePanel.css
+++ b/src/pages/Game/GamePanel.css
@@ -50,21 +50,36 @@
     width: 34.46859%;
     /* width: 315.5916px; */
     /* width: 100%; */
-    
+    /* overflow-y: auto; */
+    /* overflow-x: hidden; */
 }
 
 .game-panel-title {
     width: 100%;
+    margin-top: 12px;
+    margin-bottom: 12px;
 }
 
 .game-panel-description {
+    /* padding-left: 5px; */
     width: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    white-space: pre-wrap;
+    /* text-align: left; */
+    /* overflow: hidden; */
+    /* overflow-y: auto; */
 }
 
 .game-panel-msg {
+    display: flex;
+    flex-grow: 1;
     width: 100%;
     /* height: 16.6384%; */
     margin: 0;
     /* padding: 0; */
     overflow: hidden;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 10px;
 }
