--- a/src/pages/Game/FavoriteList.css
+++ b/src/pages/Game/FavoriteList.css
@@ -2,6 +2,8 @@
    box-shadow: 0px 0px 21px 4px #000000;
    background-color: rgba(31, 31, 31, 0.37);
    /* background-color: rgb(31, 31, 31); */
+   /* display: flex;
+   flex-direction: column; */
 }
 
 .fadeOut {
@@ -17,6 +19,8 @@
 .favorite-nav-arrow {
     opacity: .3;
     background-color: grey;
+    /* margin-bottom: -4px; */
+    vertical-align: middle;
 }
 
 .favorite-nav-arrow:hover {
