Minor gui and usability fixes.

--- a/src/pages/Game/FavoriteList.css
+++ b/src/pages/Game/FavoriteList.css
@@ -21,6 +21,7 @@
     background-color: grey;
     /* margin-bottom: -4px; */
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .favorite-nav-arrow:hover {
