--- a/src/pages/Game/GamePanel.css
+++ b/src/pages/Game/GamePanel.css
@@ -92,12 +92,15 @@
     justify-content: flex-start;
     align-items: center;
     margin-left: 10px;
-    /* padding-left: 10px; */
+
+
 }
 
 .game-panel-info {
     width: 34.46859%;
+    /* width: 32.46859%; */
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .game-panel-title {
@@ -108,8 +111,11 @@
 
 
 .game-panel-description {
-    width: 100%;
+    /* width: 100%; */
+    width: 98%;
     font-weight: 400;
     font-size: 16px;
     white-space: pre-wrap;
+    margin-left: 1%;
+    margin-right: 1%;
 }
