--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -26,7 +26,8 @@
     width: 48%;
 
     /* background-color: blue; */
-    box-shadow: 0px 0px 21px 2px #000000;
+    /* box-shadow: 0px 0px 21px -2px #000000; */
+    box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.83);
 }
 
 
@@ -84,7 +85,7 @@
     width: 48%;
     /* border: 1px solid red; */
     /* box-shadow: 0px 0px 21px 2px #000000; */
-    box-shadow: 0px 0px 21px 2px rgba(0,0,0,0.83);
+    box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.83);
     
     box-sizing: border-box;
     /* border: 10px ridge #1C6EA4; */
@@ -209,11 +210,11 @@
     }
 
     .p-shadow-top {
-        box-shadow: 0px -3px 21px 2px rgba(0,0,0,0.53);
+        box-shadow: 0px -3px 21px -2px rgba(0,0,0,0.53);
     }
 
     .p-shadow-bot {
-        box-shadow: 0px 3px 21px 2px rgba(0,0,0,0.53);
+        box-shadow: 0px 10px 21px -2px rgba(0,0,0,0.53);
     }
 
 }
