--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -5,8 +5,8 @@
     background-repeat: no-repeat;
     background-attachment: fixed; */
 
-    height: 100%;
-    background-size: cover;
+    /* height: 100%; */
+    /* background-size: cover; */
     /* filter: blur(1px); */
     /* -webkit-filter: blur(8px); */
     display: flex;
