--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -48,3 +48,14 @@
     height: 100%;
     /* margin: 10px 0 10px 0; */
 }
+
+.about-seperator {
+    /* width: 100%; */
+    display: block;
+    height: 1px;
+    border: 0;
+    /* border-top: 1px solid #ccc; */
+    border-top: 1px solid black;
+    margin: 1em 30px 1em 30px;
+    padding: 0;
+}
