--- a/src/pages/About/AboutPanel.css
+++ b/src/pages/About/AboutPanel.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     width: 100%;
 
-    background-color: pink;
+    /* background-color: pink; */
     margin-bottom: 20px;
 }
 
