--- a/src/pages/About/AboutPanel.css
+++ b/src/pages/About/AboutPanel.css
@@ -4,7 +4,7 @@
     width: 100%;
 
     /* background-color: pink; */
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 .about-panel-img-container {
