--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -181,6 +181,13 @@
     opacity: .9;
 }
 
+.dark-link {
+    color: rgb(62, 166, 255);
+}
+
+.light-link {
+    color: rgb(6, 95, 212);
+}
 
 @media only screen and (max-width: 900px){
     .portfolio-panel-container {
@@ -216,5 +223,4 @@
     .p-shadow-bot {
         box-shadow: 0px 10px 21px -2px rgba(0,0,0,0.53);
     }
-
 }
