--- a/src/pages/About/AboutPanel.css
+++ b/src/pages/About/AboutPanel.css
@@ -2,15 +2,10 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-
-    /* background-color: pink; */
-    /* margin-bottom: 20px; */
 }
 
 .about-panel-img-container {
     width: 50%;
-    /* display: flex; */
-    /* align-content: center; */
     display: flex;
     align-items: center;
     margin-top: 10px;
@@ -18,13 +13,8 @@
 }
 
 .about-panel-img {
-    /* width: 100%; */
     width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 0;
-    margin-bottom: 0;
-    /* width: 50%; */
+    margin: 0 5% 0 5%;
     object-fit: contain;
 }
 
@@ -33,8 +23,6 @@
     margin-left: 3%;
     margin-right: 3%;
     display: flex;
-    /* justify-content: center; */
-    /* align-content: center; */
     align-items: center;
     white-space: pre-wrap;
 }
