--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -34,10 +34,10 @@
     padding: 0;
 }
 
-.light {
+.seperator-light {
     border-top: 1px solid black;
 }
 
-.dark {
+.seperator-dark {
     border-top: 1px solid lightgrey;
 }
