--- a/src/pages/Game/GamePanel.css
+++ b/src/pages/Game/GamePanel.css
@@ -39,6 +39,8 @@
     justify-content: flex-start;
     align-items: center;
     margin-left: 10px;
+
+    font-size: 18px;
 }
 
 .game-panel-info {
@@ -51,6 +53,9 @@
     width: 100%;
     margin-top: 12px;
     margin-bottom: 12px;
+
+    /* font-size: 32px; */
+    font-size: 28px;
 }
 
 
