--- a/src/pages/Portfolio/PortfolioPanel.css
+++ b/src/pages/Portfolio/PortfolioPanel.css
@@ -53,13 +53,20 @@
 }
 
 .portfolio-info-title {
-    font-size: 32px;
+    /* font-size: 32px; */
     margin-top: 21.44px;
     margin-bottom: 21.44px;
 
     /* font-size: 24px; */
     /* margin-top: 26.56px;
     margin-bottom: 26.56px; */ 
+    font-size: 22px;
+    /* font-size: 20px; */
+}
+
+.portfolio-info-link-wrapper {
+    /* margin-bottom: 10px; */
+    margin-bottom: 5px;
 }
 
 .portfolio-info-link {
@@ -73,6 +80,10 @@
     font-style: italic;
 }
 
+.portfolio-info-tech-wrapper {
+    margin-top: 0px;
+}
+
 .portfolio-info-tech {
     font-weight: 400;
 }
@@ -80,6 +91,7 @@
 .portfolio-info-desc {
     font-weight: 400;
     font-size: 17px;
+    white-space: pre-wrap;
 }
 
 .portfolio-panel-img-fs-container {
