--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -61,7 +61,8 @@
     width: 285px;
     margin: 0;
     white-space:pre;
-    text-align: start;
+    /* text-align: start; */
+    justify-content: center;
 }
 
 .fw-normal {
@@ -78,4 +79,32 @@
     font-weight: 400;
     color: rgb(62, 166, 255);
     text-decoration: none;
+}
+
+.home-section-1-text-contact-container .test-3 {
+    margin-top: 10px;
+}
+
+.test-3 {
+    display: flex;
+    align-items: center;
+
+    margin-top: 30px;
+}
+
+.link-icon {
+    color: rgb(17, 82, 147);
+    margin: 0px 6px 0px 6px;
+}
+
+.icon-linkedin {
+    color: rgb(17, 82, 147);
+}
+
+.icon-github-dark {
+    color: rgb(36, 41, 46);
+}
+
+.icon-github-light {
+    color: white;
 }
