--- a/src/pages/components/Nav/Nav.css
+++ b/src/pages/components/Nav/Nav.css
@@ -32,7 +32,8 @@
 }
 
 .dark {
-    background-color: rgb(75, 75, 75);
+    /* background-color: rgb(75, 75, 75); */
+    background-color: #303030;
     color: rgba(255, 255, 255, .9);
     transition: all 0.25s linear;
 }
